Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48708

Signal for folderlistmodel in qml that informs us it is complete initialized

XMLWordPrintable

    • e29047555be764d59c52801553e23767ed367cec

      Users are trying to get done some work with folderlistmodel on its initialization completed. However the Component-onComplete method is not always suitable for this task. More than likely its behaviour is undefined if someone will try to get a count of elements in the folder. However, many reported, the count is equal to zero. onCountChanged cannot be used for this task, due to the one major problem: on Linux/Windows machines count is modified several times during the initialization.

      On behalf of Qt framework users I would like to request to implement this feature, a signal which does inform the folderlistmodel is completely initialized and can be used for getting the information about the directory it was aimed to.

      Thank you!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes