FolderListModel: add status property

This allows to track directory loading

Task-number: QTBUG-48708
Change-Id: If79a325ef1bfc831d3bc2a205e3127a571fcb0c1
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>