src/imports/folderlistmodel/plugin.cpp
@@ -66,6 +66,12 @@ public:
         qmlRegisterType<QQuickFolderListModel>(uri,2,0,"FolderListModel");
         qmlRegisterType<QQuickFolderListModel,1>(uri,2,1,"FolderListModel");
         qmlRegisterType<QQuickFolderListModel,2>(uri,2,2,"FolderListModel");
+
+        // Auto-increment the import to stay in sync with ALL future QtQuick minor versions from 5.11 onward
+        qmlRegisterModule(uri, 2, QT_VERSION_MINOR);
+
+        // revision in Qt 5.11: added status property
+        qmlRegisterType<QQuickFolderListModel,11>(uri, 2, 11, "FolderListModel");
     }
 };
 //![class decl]
